add related products below intro

--- a/_products/pl/drapaki-dla-kota/dz010407001-v01.md
+++ b/_products/pl/drapaki-dla-kota/dz010407001-v01.md
@@ -4,6 +4,9 @@ name: Drapak na ścianę 60 cm x 11 cm beżowy
 description: 'Postaw na praktyczny drapak, który można przymocować do ściany.'
 photo: "/uploads/produkty/pl/drapaki-dla-kota/DZ010408002-V01.webp"
 links:
+- template: link
+  provider: domowezoo.pl
+  next-url:
   url: https://domowezoo.pl/sklep/p/3719-drapak-na-sciane-60-cm-x-11-cm-bezowy
   anchor: Kup od 40,99 zł
 properties:
