--- a/_products/pl/zabawki-dla-psa/dz010404002-v03.md
+++ b/_products/pl/zabawki-dla-psa/dz010404002-v03.md
@@ -4,6 +4,9 @@ name: Sznur do szarpania 26 cm
 description: 'Postaw na wielozadaniowy sznur, który będzie pełnić funkcję szarpaka.'
 photo: "/uploads/produkty/pl/zabawki-dla-psa/DZ010404002-V03.webp"
 links:
+- template: link
+  provider: domowezoo.pl
+  next-url:
   url: https://domowezoo.pl/sklep/p/3359-sznur-do-szarpania-26-cm
   anchor: Kup od 8,99 zł
 properties:
