--- a/_products/pl/zabawki-dla-psa/dz010404005-v01.md
+++ b/_products/pl/zabawki-dla-psa/dz010404005-v01.md
@@ -4,6 +4,9 @@ name: Zabawka z amortyzatorem Bungee dummy 20 cm / 47 cm
 description: 'Postaw na estetyczny i wytrzymały szarpak z amortyzatorem. Twój psiak go pokocha, a Ty będziesz mógł spędzać z nim długie godziny - bawiąc się w domu lub na świeżym powietrzu.'
 photo: "/uploads/produkty/pl/zabawki-dla-psa/DZ010404005-V01.webp"
 links:
+- template: link
+  provider: domowezoo.pl
+  next-url:
   url: https://domowezoo.pl/sklep/p/3522-zabawka-z-amortyzatorem-bungee-dummy-20-cm-47-cm
   anchor: Kup od 28,99 zł
 properties:
