--- a/_products/pl/drapaki-dla-kota/dz010408001-v01.md
+++ b/_products/pl/drapaki-dla-kota/dz010408001-v01.md
@@ -4,6 +4,9 @@ name: Drapak dla kota 48 cm x 16 cm x 22 cm
 description: 'Wybierz praktyczny i kompaktowy drapak.'
 photo: "/uploads/produkty/pl/drapaki-dla-kota/DZ010408001-V01.webp"
 links:
+- template: link
+  provider: domowezoo.pl
+  next-url:
   url: https://domowezoo.pl/sklep/p/3489-drapak-dla-kota-48-cm-x-16-cm-x-22-cm
   anchor: Kup od 75,99 zł
 properties:
