--- a/_products/pl/zabawki-dla-psa/dz010404001-v02.md
+++ b/_products/pl/zabawki-dla-psa/dz010404001-v02.md
@@ -4,6 +4,9 @@ name: Sznur do szarpania z piłką 50 cm
 description: 'Wybierz szarpak zakończony piłeczką, który zapewni Tobie i pupilowi mnóstwo dobrej zabawy. '
 photo: "/uploads/produkty/pl/zabawki-dla-psa/DZ010404001-V02.webp"
 links:
+- template: link
+  provider: domowezoo.pl
+  next-url:
   url: https://domowezoo.pl/sklep/p/3358-sznur-do-szarpania-z-pilka-50-cm
   anchor: Kup od 13,99 zł
 properties:
@@ -12,4 +15,5 @@ properties:
   brand: Trixie
 tags:
   - pies
+distinction: our_choice
 ---
