--- a/_products/pl/zabawki-dla-psa/dz010404006-v01.md
+++ b/_products/pl/zabawki-dla-psa/dz010404006-v01.md
@@ -4,6 +4,9 @@ name: Zabawka z amortyzatorem Bungee Fun 20 cm / 47 cm
 description: 'Postaw na estetyczny i wytrzymały szarpak z amortyzatorem. Twój psiak go pokocha!'
 photo: "/uploads/produkty/pl/zabawki-dla-psa/DZ010404006-V01.webp"
 links:
+- template: link
+  provider: domowezoo.pl
+  next-url:
   url: https://domowezoo.pl/sklep/p/3838-zabawka-z-amortyzatorem-bungee-fun-20-cm-47-cm
   anchor: Kup od 28,99 zł
 properties:
